# NESEmulator

./: .gitignore  README.md
NESEmulator/: Ricoh_2A03.c  cpu.c  cpu.h  main.c  stack.c  stack.h  utilities.c
logisim/: SR Flip Flop (Active High).circ
src/: CMakeLists.txt  SDL_MAIN_HANDLED  build.sh  buildAndRun  buildAndRun.sh  compile_commands.json  cpu.c  cpu.h  emulator.c  emulator.h  getdependencies  main.c  stack.c  stack.h  utilities.c  utilities.h
